Specific Rig Crashes blender when going into pose mode #84848

Closed
opened 2021-01-19 05:18:09 +01:00 by bassam kurdali · 14 comments
Member

System Information
Operating system: Linux-5.10.7-200.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits
Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-27 21:45, hash: aa64fd69e7
Worked: not sure but pre 2.80

Short description of error
This specific file, containing only one armature, crashes when selecting the armature and attempting to enter pose mode.

Exact steps for others to reproduce the error
First load the included file, then:

  • select the rig if it isn't already selected,
  • press ctrl tab or otherwise enter pose mode
    at this point blender crashes.bug_posemode.blend
**System Information** Operating system: Linux-5.10.7-200.fc33.x86_64-x86_64-with-fedora-33-Thirty_Three 64 Bits Graphics card: GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-12-27 21:45, hash: `aa64fd69e7` Worked: not sure but pre 2.80 **Short description of error** This specific file, containing only one armature, crashes when selecting the armature and attempting to enter pose mode. **Exact steps for others to reproduce the error** First load the included file, then: - select the rig if it isn't already selected, - press ctrl tab or otherwise enter pose mode at this point blender crashes.[bug_posemode.blend](https://archive.blender.org/developer/F9586737/bug_posemode.blend)
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Author
Member
  • 0 0x00007fffbf121d52 in () at /lib64/libnvidia-glcore.so.460.32.03
  • 1 0x00007fffbee28a0b in () at /lib64/libnvidia-glcore.so.460.32.03
  • 2 0x00007fffbed1abaf in () at /lib64/libnvidia-glcore.so.460.32.03
  • 3 0x00007fffbed1afff in () at /lib64/libnvidia-glcore.so.460.32.03
  • 4 0x00007fffbed1c5f2 in () at /lib64/libnvidia-glcore.so.460.32.03
  • 5 0x00007fffbf0f1c20 in () at /lib64/libnvidia-glcore.so.460.32.03
  • 6 0x00007fffbed2db7c in () at /lib64/libnvidia-glcore.so.460.32.03
  • 7 0x0000000001381af9 in ()
  • 8 0x00000000013828b8 in ()
  • 9 0x000000000138318f in DRW_draw_pass ()
  • 10 0x00000000013ad414 in ()
  • 11 0x000000000137acde in ()
  • 12 0x000000000137af52 in DRW_draw_render_loop_ex ()
  • 13 0x0000000001beeb9f in view3d_main_region_draw ()
  • 14 0x0000000001799d41 in ED_region_do_draw ()
  • 15 0x00000000012319fe in wm_draw_update ()
  • 16 0x000000000122f8a0 in WM_main ()
  • 17 0x0000000000de68de in main ()
- 0 0x00007fffbf121d52 in () at /lib64/libnvidia-glcore.so.460.32.03 - 1 0x00007fffbee28a0b in () at /lib64/libnvidia-glcore.so.460.32.03 - 2 0x00007fffbed1abaf in () at /lib64/libnvidia-glcore.so.460.32.03 - 3 0x00007fffbed1afff in () at /lib64/libnvidia-glcore.so.460.32.03 - 4 0x00007fffbed1c5f2 in () at /lib64/libnvidia-glcore.so.460.32.03 - 5 0x00007fffbf0f1c20 in () at /lib64/libnvidia-glcore.so.460.32.03 - 6 0x00007fffbed2db7c in () at /lib64/libnvidia-glcore.so.460.32.03 - 7 0x0000000001381af9 in () - 8 0x00000000013828b8 in () - 9 0x000000000138318f in DRW_draw_pass () - 10 0x00000000013ad414 in () - 11 0x000000000137acde in () - 12 0x000000000137af52 in DRW_draw_render_loop_ex () - 13 0x0000000001beeb9f in view3d_main_region_draw () - 14 0x0000000001799d41 in ED_region_do_draw () - 15 0x00000000012319fe in wm_draw_update () - 16 0x000000000122f8a0 in WM_main () - 17 0x0000000000de68de in main ()

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Cant redo:

  • OS: Linux 5.10.7-arch1-1
  • REV: df2ed1550d69fc05892b9f5d392ff188e46504cd
  • GPU: [AMD/ATI] Navi 10 [Radeon RX 5600 OEM/5600 XT / 5700/5700 XT]
Cant redo: * OS: Linux 5.10.7-arch1-1 * REV: `df2ed1550d69fc05892b9f5d392ff188e46504cd` * GPU: `[AMD/ATI] Navi 10 [Radeon RX 5600 OEM/5600 XT / 5700/5700 XT]`

Added subscriber: @rjg

Added subscriber: @rjg

I'm not getting a crash but my debug build complains that in mpath_vbo_get the mpath->points is NULL.

mpath_vbo_get(bMotionPath * mpath) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:72)
mpath_batch_line_get(bMotionPath * mpath) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:81)
motion_path_cache(OVERLAY_Data * vedata, Object * ob, bPoseChannel * pchan, bAnimVizSettings * avs, bMotionPath * mpath) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:161)
OVERLAY_motion_path_cache_populate(OVERLAY_Data * vedata, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:219)
OVERLAY_cache_populate(void * vedata, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_engine.c:430)
drw_engines_cache_populate(Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1096)
DRW_draw_render_loop_ex(struct Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1604)
DRW_draw_view(const bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1511)
view3d_draw_view(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1593)
view3d_main_region_draw(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1615)
ED_region_do_draw(bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:546)
wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:731)
wm_draw_window(bContext * C, wmWindow * win) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:872)
wm_draw_update(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1073)
WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:641)
main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522)
I'm not getting a crash but my debug build complains that in `mpath_vbo_get` the `mpath->points` is `NULL`. ```lines mpath_vbo_get(bMotionPath * mpath) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:72) mpath_batch_line_get(bMotionPath * mpath) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:81) motion_path_cache(OVERLAY_Data * vedata, Object * ob, bPoseChannel * pchan, bAnimVizSettings * avs, bMotionPath * mpath) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:161) OVERLAY_motion_path_cache_populate(OVERLAY_Data * vedata, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_motion_path.c:219) OVERLAY_cache_populate(void * vedata, Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/engines/overlay/overlay_engine.c:430) drw_engines_cache_populate(Object * ob) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1096) DRW_draw_render_loop_ex(struct Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1604) DRW_draw_view(const bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/draw/intern/draw_manager.c:1511) view3d_draw_view(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1593) view3d_main_region_draw(const bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/space_view3d/view3d_draw.c:1615) ED_region_do_draw(bContext * C, ARegion * region) (/home/dev/01-data/01-git/blender-git/blender/source/blender/editors/screen/area.c:546) wm_draw_window_offscreen(bContext * C, wmWindow * win, _Bool stereo) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:731) wm_draw_window(bContext * C, wmWindow * win) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:872) wm_draw_update(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1073) WM_main(bContext * C) (/home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:641) main(int argc, const char ** argv) (/home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522) ```
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this crash on 2.92.0 Beta, branch: master, commit date: 2021-01-19 06:12, hash: 418cd7c4ba.

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.38

# Blender 2.92.0, Commit date: 2021-01-19 06:12, Hash 418cd7c4bae6
bpy.ops.object.posemode_toggle()  # Operator

# backtrace
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(BLI_system_backtrace+0x39) [0xe430dac]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x33d8a71]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x33d8c99]
/lib/x86_64-linux-gnu/libc.so.6(+0x41950) [0x7efcaf159950]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0x1352204) [0x7efc8aea6204]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xfc215a) [0x7efc8ab1615a]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe7a3fc) [0x7efc8a9ce3fc]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe878e7) [0x7efc8a9db8e7]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe87b09) [0x7efc8a9dbb09]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0x131936d) [0x7efc8ae6d36d]
/lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe80190) [0x7efc8a9d4190]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(_ZN7blender3gpu7GLBatch4drawEiiii+0x16b) [0xce4b9a7]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(GPU_batch_draw_advanced+0x150) [0xce1f799]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3cf4989]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3cf53c6]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3cf56c9]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(DRW_draw_pass+0x30) [0x3cf5807]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(OVERLAY_motion_path_draw+0x2f) [0x3d4d5b9]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3d3e02b]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3ce6047]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(DRW_draw_render_loop_ex+0x593) [0x3ce771e]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(DRW_draw_view+0x177) [0x3ce712f]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x4ba813d]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(view3d_main_region_draw+0x47) [0x4ba81ec]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(ED_region_do_draw+0x1a8) [0x44559f1]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x39eeca4]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x39ef265]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(wm_draw_update+0xc9) [0x39ef8b1]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(WM_main+0x4c) [0x39ebee2]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x33d4195]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf2) [0x7efcaf140cb2]
/.../blender-git/build_linux_blender_v2.92_release/bin/blender(_start+0x2e) [0x33d3b7e]

# Python backtrace
I can reproduce this crash on 2.92.0 Beta, branch: master, commit date: 2021-01-19 06:12, hash: `418cd7c4ba`. **System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.38 ``` # Blender 2.92.0, Commit date: 2021-01-19 06:12, Hash 418cd7c4bae6 bpy.ops.object.posemode_toggle() # Operator # backtrace /.../blender-git/build_linux_blender_v2.92_release/bin/blender(BLI_system_backtrace+0x39) [0xe430dac] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x33d8a71] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x33d8c99] /lib/x86_64-linux-gnu/libc.so.6(+0x41950) [0x7efcaf159950] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0x1352204) [0x7efc8aea6204] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xfc215a) [0x7efc8ab1615a] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe7a3fc) [0x7efc8a9ce3fc] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe878e7) [0x7efc8a9db8e7] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe87b09) [0x7efc8a9dbb09] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0x131936d) [0x7efc8ae6d36d] /lib/x86_64-linux-gnu/libnvidia-glcore.so.455.38(+0xe80190) [0x7efc8a9d4190] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(_ZN7blender3gpu7GLBatch4drawEiiii+0x16b) [0xce4b9a7] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(GPU_batch_draw_advanced+0x150) [0xce1f799] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3cf4989] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3cf53c6] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3cf56c9] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(DRW_draw_pass+0x30) [0x3cf5807] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(OVERLAY_motion_path_draw+0x2f) [0x3d4d5b9] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3d3e02b] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x3ce6047] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(DRW_draw_render_loop_ex+0x593) [0x3ce771e] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(DRW_draw_view+0x177) [0x3ce712f] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x4ba813d] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(view3d_main_region_draw+0x47) [0x4ba81ec] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(ED_region_do_draw+0x1a8) [0x44559f1] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x39eeca4] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x39ef265] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(wm_draw_update+0xc9) [0x39ef8b1] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(WM_main+0x4c) [0x39ebee2] /.../blender-git/build_linux_blender_v2.92_release/bin/blender() [0x33d4195] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf2) [0x7efcaf140cb2] /.../blender-git/build_linux_blender_v2.92_release/bin/blender(_start+0x2e) [0x33d3b7e] # Python backtrace ```
Member

If I disable motion paths in the overlay before going into pose mode, Blender does not crash.

If I disable motion paths in the overlay before going into pose mode, Blender does not crash.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

I'm moving this to the "other module's responsibility" board, as this seems to be a GPU/drawing issue and not an animation-tooling issue.

I'm moving this to the "other module's responsibility" board, as this seems to be a GPU/drawing issue and not an animation-tooling issue.

Added subscriber: @ArtisticBee

Added subscriber: @ArtisticBee
Philipp Oeser removed the
Interest
Viewport & EEVEE
label 2023-02-09 15:14:03 +01:00
Member

We apprently have two bones here (namely abdomen_tip and automin_root, that do have a bMotionPath but its length is zero (which causes trouble in motion_path_cache.

Not exactly sure how we got there, something like animviz_verify_motionpaths should take care of this.

Maybe it is enough to have an early sanity return in motion_path_cache.

Will dig a bit further (and put on my desk for now)...

We apprently have two bones here (namely `abdomen_tip` and `automin_root`, that do have a `bMotionPath` but its length is zero (which causes trouble in `motion_path_cache`. Not exactly sure how we got there, something like `animviz_verify_motionpaths` should take care of this. Maybe it is enough to have an early sanity return in `motion_path_cache`. Will dig a bit further (and put on my desk for now)...
Philipp Oeser self-assigned this 2024-03-05 10:42:09 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-05 13:17:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#84848
No description provided.